--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <title>Aama Design | lampe modulaire personnalisable</title>
 </head>
 <body>
-    <h1>test</h1>
+    <h1>Test</h1>
 </body>
 </html>
