--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </style>
     <!--fontawsome-->
     <script src="https://kit.fontawesome.com/7909d40077.js" crossorigin="anonymous"></script>
+    <!-- Swiper Js -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+
     <link rel="stylesheet" href="dist/main.css">
     <title>Aama Design | lampe modulaire personnalisable</title>
 </head>
@@ -67,11 +70,30 @@
         <div class="video h-screen">
             VIDEO AU SCROLL ICI
         </div>
-        <div class="products p-5">
+        <div class="products p-5 flex flex-col">
             <h2 class="h2">Nos totems préfabriqués</h2>
-            <div>
-                <p>SLIDER HERE</p>
+            <!-- Slider main container -->
+            <div class="swiper swiper_product">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                <!-- Slides -->
+                    <div class="swiper-slide relative w-fit">
+                        <div class="absolute top-0 left-0 h-full w-full p-5 flex flex-col justify-between">
+                            <p class="text-white">Modèle</p>
+                            <div class="flex flex-row justify-between items-baseline">
+                                <p class="font-bold text-white">Prix €€€</p>
+                                <p class="button_secondary text-white border-white">Acheter</p>    
+                            </div>
+                        </div>
+                        <div class="relative -z-10">
+                            <img src="src/images/product_card.svg" alt="">
+                            <img src="src/images/product_image.png" alt="" class="absolute top-0 left-0">
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-scrollbar static m-6"></div>
             </div>
+            <button class="button_secondary self-center">Toutes nos lampes</button>
         </div>
         <div class="brand w-screen">
             <div class="grid_brand">
@@ -116,7 +138,21 @@
         <div class="opinions p-5">
             <h2 class="h2">Ils sont convaincus</h2>
             <div>
-                <p>SLIDER OPINIONS HERE</p>
+                <div class="swiper swiper_opinion">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                    <!-- Slides -->
+                        <div class="swiper-slide relative w-fit tablet:w-1/3">
+                            <div class="absolute top-0 left-0 h-full w-2/3 p-5 tablet:w-3/4">
+                                <p class="m-0 tablet:mb-4">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum harum tempore ratione possimus nesciunt odio?"</p>
+                                <p class="text-end mr-2">lorem ipsum</p>
+                            </div>
+                            <img src="src/images/opinion_card.png" alt="" class="-z-10 w-[90vw]">
+                        </div>
+                        <!-- If we need scrollbar -->
+                        <div class="swiper-scrollbar"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -144,5 +180,34 @@
             </form>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script>
+        const swiperProduct = new Swiper('.swiper_product', {
+            // Optional parameters
+            direction: 'horizontal',
+            slidesPerView: "auto",
+            spaceBetween: 30,
+            loop: true,
+            centeredSlides: true,
+            // And if we need scrollbar
+            scrollbar: {
+                el: '.swiper-scrollbar',
+            },
+        });
+        const swiperOpinion = new Swiper('.swiper_opinion', {
+            // Optional parameters
+            direction: 'horizontal',
+            slidesPerView: "auto",
+            spaceBetween: 30,
+            loop: true,
+            centeredSlides: true,
+            // And if we need scrollbar
+            scrollbar: {
+                el: '.swiper-scrollbar',
+            },
+        });
+        
+    </script>
 </body>
 </html>
