--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script src="https://kit.fontawesome.com/7909d40077.js" crossorigin="anonymous"></script>
     <!-- Swiper Js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="./src/images/favicon.svg">
 
     <link rel="stylesheet" href="dist/main.css">
     <title>Aama Design | lampe modulaire personnalisable</title>
