--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
     </style>
     <!--fontawsome-->
-    <script src="https://kit.fontawesome.com/7909d40077.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7909d40077.js" crossorigin="anonymous"></script>    
     <!-- Swiper Js -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
     <!-- Favicon -->
@@ -51,12 +51,17 @@
                 </nav>
             </div>    
         </div>
-        <h1 class="h1 tracking-widest text-6xl mt-24 laptop:mt-40 laptop:text-[12rem]">Ciluzio</h1>
-        <img src="/src/images/nude_grande.png" class="absolute -bottom-32 scale-150 laptop:scale-50 laptop:-bottom-full">
+        <h1 class="h1 tracking-widest text-6xl mt-24 laptop:mt-40 laptop:text-[12rem] desktop:mt-52">Ciluzio</h1>
+        <img src="/src/images/nude_grande.png" class="absolute -bottom-32 scale-150 laptop:scale-50 laptop:-bottom-full desktop:-bottom-5/6 desktop:scale-75">
         <div class="z-10 laptop:self-end laptop:w-1/3 laptop:mr-20">
             <p class="text-white hidden laptop:block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta beatae molestiae autem dolor non optio.</p>
             <p class="text-white text-base font-semibold hidden laptop:block">À partir de 490€</p>
-            <button class="button justify-self-end">Personnaliser <i class="fa-light fa-arrow-right"></i></button>    
+            <button class="button justify-self-end">Personnaliser
+                <svg width="28" height="16" viewBox="0 0 28 16" fill="none">
+                    <path d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                    <path d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                </svg> 
+            </button>    
         </div>
     </header>
     <main>
@@ -66,16 +71,16 @@
             <h2 class="uppercase text-red text-quicksand text-xl font-medium z-10 laptop:text-5xl">Aama Design</h2>
             <p class="h1 text-red z-10 mx-32">Des lampes  faites à la main en france</p>
             <div class="z-10 macaron flex justify-center items-center">
-                <a href=""><img src="/src/images/macaron_icon.svg" alt=""></a>  
+                <a href="" class="mb-0"><img src="/src/images/macaron_icon.svg" alt=""></a>  
             </div>    
         </div>
         <div class="video h-screen">
             VIDEO AU SCROLL ICI
         </div>
-        <div class="products p-5 flex flex-col">
-            <h2 class="h2">Nos totems préfabriqués</h2>
+        <div class="products flex flex-col my-12">
+            <h2 class="h2 px-5 laptop:px-20">Nos totems préfabriqués</h2>
             <!-- Slider main container -->
-            <div class="swiper swiper_product">
+            <div class="swiper swiper_product flex flex-col justify-center items-center">
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                 <!-- Slides -->
@@ -92,8 +97,22 @@
                             <img src="src/images/product_image.png" alt="" class="absolute top-0 left-0">
                         </div>
                     </div>
+
+                    <div class="swiper-slide relative w-fit">
+                        <div class="absolute top-0 left-0 h-full w-full p-5 flex flex-col justify-between">
+                            <p class="text-white">Modèle</p>
+                            <div class="flex flex-row justify-between items-baseline">
+                                <p class="font-bold text-white">Prix €€€</p>
+                                <p class="button_secondary text-white border-white">Acheter</p>    
+                            </div>
+                        </div>
+                        <div class="relative -z-10">
+                            <img src="src/images/product_card.svg" alt="">
+                            <img src="src/images/product_image.png" alt="" class="absolute top-0 left-0">
+                        </div>
+                    </div>
                 </div>
-                <div class="swiper-scrollbar static m-6"></div>
+                <div class="swiper-pagination w-1/2 static m-3"></div>
             </div>
             <button class="button_secondary self-center">Toutes nos lampes</button>
         </div>
@@ -106,7 +125,7 @@
                     <p class="h1 text-2xl">Aama Design, qu’est ce que c’est ?</p>
                 </div>
                 <div class="brand_pattern w-screen h-[100vw] flex flex-col items-center justify-center overflow-hidden laptop:h-auto laptop:w-auto">
-                    <img src="/src/images/brand_pattern.svg" alt="PATERN HERE" class="max-h-full">
+                    <img src="/src/images/brand_pattern.svg" alt="PATERN HERE" class="w-full max-h-full">
                 </div>
                 <div class="brand_quote w-screen h-[100vw] p-5 flex flex-col items-center justify-center text-center bg-marine laptop:h-auto laptop:w-auto">
                     <p class="text-white font-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque doloremque suscipit praesentium, aperiam in optio.</p>
@@ -121,29 +140,39 @@
                 </div>
                 <div class="brand_value w-screen h-[100vw] p-5 flex flex-col items-center justify-evenly bg-yellow laptop:h-auto laptop:w-auto">
                     <p class="text-black font-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat repudiandae facilis fuga, debitis minima hic eligendi qui assumenda, dolorum, ut minus? Culpa consequatur aspernatur totam fugit pariatur veritatis velit quam.</p>
-                    <button class="button bg-marine text-white">Nos valeurs <i class="fa-light fa-arrow-right"></i></button>
+                    <button class="button bg-marine text-white">Nos valeurs
+                        <svg width="28" height="16" viewBox="0 0 28 16" fill="none" class="stroke-white">
+                            <path d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                            <path d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                        </svg> 
+                    </button>
                 </div>
             </div>
 
         </div>
-        <div class="personalisation w-screen h-screen bg-orange p-5 relative flex flex-col items-center justify-between">
-            <img src="/src/images/victor-medio.webp" alt="" class="absolute">
-            <h2 class="h1 text-2xl text-white text-center z-10 laptop:text-5xl laptop:mt-20"><span>Personnalisez</span> <br/> <span>votre lampe</span></h2>
-            <div class="flex flex-col justify-between h-56 laptop:flex-row laptop:w-11/12">
+        <div class="personalisation w-screen h-screen bg-orange px-5 laptop:px-20 py-5 relative flex flex-col items-center justify-between overflow-hidden">
+            <h2 class="h1 text-2xl text-white text-center laptop:text-8xl laptop:mt-32"><span>Personnalisez</span></h2>
+            <img src="/src/images/victor-medio.webp" alt="" class="absolute bottom-60 z-10 laptop:-bottom-[90%]">
+            <h2 class="h1 text-2xl text-white text-center mt-[-450px] z-20 laptop:text-8xl laptop:mt-0"><span>votre lampe</span></h2>
+            
+            <div class="flex flex-col justify-between laptop:h-56 laptop:flex-row laptop:w-11/12">
                 <p class="text-white justify-self-end z-10 laptop:w-[30vw]">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, maxime recusandae accusantium doloribus architecto accusamus.</p>
                 <div class="z-10 justify-self-end flex flex-col items-end">
-                    <button class="button bg-white text-orange">Personnaliser <i class="fa-light fa-arrow-right"></i></button>
+                    <button class="button bg-white text-orange">Personnaliser
+                        <svg width="28" height="16" viewBox="0 0 28 16" fill="none" class="stroke-orange">
+                            <path d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                            <path d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                        </svg>                            
+                    </button>
                     <button class="button_secondary border-white text-white mt-0">Besoin d'inspiration ?</button>          
                 </div>
             </div>
         </div>
-        <div class="opinions p-5">
-            <h2 class="h2">Ils sont convaincus</h2>
+        <div class="opinions my-12">
+            <h2 class="h2 px-5 laptop:px-20">Ils sont convaincus</h2>
             <div>
-                <div class="swiper swiper_opinion">
-                    <!-- Additional required wrapper -->
+                <div class="swiper swiper_opinion flex flex-col justify-center items-center">
                     <div class="swiper-wrapper">
-                    <!-- Slides -->
                         <div class="swiper-slide relative w-fit tablet:w-1/3">
                             <div class="absolute top-0 left-0 h-full w-2/3 p-5 tablet:w-3/4">
                                 <p class="m-0 tablet:mb-4">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum harum tempore ratione possimus nesciunt odio?"</p>
@@ -151,14 +180,20 @@
                             </div>
                             <img src="src/images/opinion_card.png" alt="" class="-z-10 w-[90vw]">
                         </div>
-                        <!-- If we need scrollbar -->
-                        <div class="swiper-scrollbar"></div>
+                        <div class="swiper-slide relative w-fit tablet:w-1/3">
+                            <div class="absolute top-0 left-0 h-full w-2/3 p-5 tablet:w-3/4">
+                                <p class="m-0 tablet:mb-4">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum harum tempore ratione possimus nesciunt odio?"</p>
+                                <p class="text-end mr-2">lorem ipsum</p>
+                            </div>
+                            <img src="src/images/opinion_card.png" alt="" class="-z-10 w-[90vw]">
+                        </div>
                     </div>
+                    <div class="swiper-pagination w-1/2 static m-3"></div>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="p-5 bg-beige laptop:flex laptop:flex-rows laptop:w-full laptop:justify-evenly">
+    <footer class="px-5 laptop:px-20 py-5 bg-beige laptop:flex laptop:flex-rows laptop:w-full laptop:justify-evenly">
         <div class="footer_info">
             <h3 class="h4 text-marine">Informations</h3>
             <p><a href="">Livraison et retours</a></p>
@@ -193,8 +228,12 @@
             loop: true,
             centeredSlides: true,
             // And if we need scrollbar
-            scrollbar: {
-                el: '.swiper-scrollbar',
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+                renderBullet: function (index, className) {
+                    return '<span class="' + className + '"></span>';
+                },
             },
         });
         const swiperOpinion = new Swiper('.swiper_opinion', {
@@ -205,8 +244,12 @@
             loop: true,
             centeredSlides: true,
             // And if we need scrollbar
-            scrollbar: {
-                el: '.swiper-scrollbar',
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+                renderBullet: function (index, className) {
+                    return '<span class="' + className + '"></span>';
+                },
             },
         });
         
