--- a/src/pages/lampes.html
+++ b/src/pages/lampes.html
@@ -67,8 +67,8 @@
                 </svg>
             </div>
             <div>
-                <div class="navigation mb-32">
-                    <div class="flex flex-wrap w-full justify-between">
+                <div class="navigation mb-32 laptop:my-10">
+                    <div class="flex flex-wrap w-full justify-between laptop:w-1/3 laptop:mx-auto">
                         <a href="./totems.html" class="relative cursor-pointer">
                             <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-marine" aria-hidden="true"></span>
                             <span class="relative">Totems</span>
@@ -83,10 +83,10 @@
                         </a>
                     </div>
                 </div>
-                <h1 class="h1 relative">Personnalisez votre Ciluzio</h1>
+                <h1 class="h1 relative laptop:text-5xl">Personnalisez <br/>votre Ciluzio</h1>
                 <p class="text-marine font-bold relative">Choisissez votre taille</p>
                 <div>
-                    <div class="swiper px-5 w-full flex flex-col justify-center items-center">
+                    <div class="swiper px-5 w-full flex flex-col justify-center items-center laptop:hidden">
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper">
                         <!-- Slides -->
@@ -146,11 +146,67 @@
                             </div>
                         </div>
                     </div>
+                    <div class="hidden laptop:grid laptop:grid-cols-3 laptop:gap-10 laptop:mx-20">
+                        <div class="relative overflow-hidden w-fit">
+                            <div class="absolute top-0 left-0 h-full w-full p-5 flex flex-col justify-between">
+                                <div class="flex flex-col items-end">
+                                    <p class="text-white font-bold text-xl">Piccolo</p>
+                                    <p class="text-white font-bold text-xl">490 €</p>
+                                    <button class="button_secondary text-white border-white">Configurer
+                                        <svg width="28" height="16" viewBox="0 0 28 16" fill="none">
+                                            <path class="stroke-white" d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                                            <path class="stroke-white" d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="-z-10">
+                                <img src="../../src/images/product_card_small.svg" alt="">
+                                <img src="../../src/images/nude-piccolo.webp" alt="" class="absolute -top-48 left-0 rotate-45">
+                            </div>
+                        </div>
+                        <div class="relative overflow-hidden w-fit">
+                            <div class="absolute top-0 left-0 h-full w-full p-5 flex flex-col justify-between">
+                                <div class="flex flex-col items-end">
+                                    <p class="text-white font-bold text-xl">Medio</p>
+                                    <p class="text-white font-bold text-xl">750 €</p>
+                                    <button class="button_secondary text-white border-white">Configurer
+                                        <svg width="28" height="16" viewBox="0 0 28 16" fill="none">
+                                            <path class="stroke-white" d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                                            <path class="stroke-white" d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="-z-10">
+                                <img src="../../src/images/product_card_small.svg" alt="">
+                                <img src="../../src/images/nude-piccolo.webp" alt="" class="absolute -top-48 left-0 rotate-45">
+                            </div>
+                        </div>
+                        <div class="relative overflow-hidden w-fit">
+                            <div class="absolute top-0 left-0 h-full w-full p-5 flex flex-col justify-between">
+                                <div class="flex flex-col items-end">
+                                    <p class="text-white font-bold text-xl">Grande</p>
+                                    <p class="text-white font-bold text-xl">890 €</p>
+                                    <button class="button_secondary text-white border-white">Configurer
+                                        <svg width="28" height="16" viewBox="0 0 28 16" fill="none">
+                                            <path class="stroke-white" d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
+                                            <path class="stroke-white" d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="-z-10">
+                                <img src="../../src/images/product_card_small.svg" alt="">
+                                <img src="../../src/images/nude-piccolo.webp" alt="" class="absolute -top-48 left-0 rotate-45">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="px-5 laptop:px-20">
+        <div class="px-5 laptop:px-20 laptop:mx-48">
             <h2 class="h2">Description</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores impedit accusantium fugit vel numquam ducimus blanditiis? Voluptatum dolore repellendus consequuntur.</p>
             <h2 class="h2">Caractéristique</h2>
