--- a/src/pages/lampes.html
+++ b/src/pages/lampes.html
@@ -68,17 +68,17 @@
             </div>
             <div>
                 <div class="navigation mb-32 laptop:my-10">
-                    <div class="flex flex-wrap w-full justify-between laptop:w-1/3 laptop:mx-auto">
+                    <div class="flex flex-wrap w-full justify-between place-items-end laptop:w-1/3 laptop:mx-auto">
                         <a href="./totems.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-marine" aria-hidden="true"></span>
+                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-marine hover:h-2" aria-hidden="true"></span>
                             <span class="relative">Totems</span>
                         </a>
                         <a href="./lampes.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-light-red" aria-hidden="true"></span>
-                            <span class="relative">Personnaliser</span>
+                            <span class="block h-3 absolute -inset-x-2 -bottom-2 top-8 bg-light-red hover:h-2" aria-hidden="true"></span>
+                            <span class="relative font-bold">Personnaliser</span>
                         </a>
                         <a href="./générateur.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-blue" aria-hidden="true"></span>
+                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-blue hover:h-2" aria-hidden="true"></span>
                             <span class="relative">Générateur</span>
                         </a>
                     </div>
