HTML / CSS responsive

--- a/src/pages/inspiration.html
+++ b/src/pages/inspiration.html
@@ -52,7 +52,7 @@
     </header>
     <main>
         <div class="mx-auto mt-24 text-center">
-            <h1 class="h1">Vos inspiration</h1>
+            <h1 class="h1">Vos inspirations</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum odit dignissimos modi libero ut quibusdam!</p>    
         </div>
         <div class="inspi_card">
@@ -73,25 +73,25 @@
                 </div>
                 <div class="inspi_card__colors">
                     <svg width="20" height="20">
-                        <circle cx="10" cy="10" r="8" stroke="black" stroke-width="1"/>
+                        <circle cx="10" cy="10" r="8" stroke="black" fill="white" stroke-width="4"/>
                     </svg>
                     <svg width="20" height="20">
-                        <circle cx="10" cy="10" r="8" stroke="black" stroke-width="1"/>
+                        <circle cx="10" cy="10" r="8" stroke="black" fill="white" stroke-width="4"/>
                     </svg>
                     <svg width="20" height="20">
-                        <circle cx="10" cy="10" r="8" stroke="black" stroke-width="1"/>
+                        <circle cx="10" cy="10" r="8" stroke="black" fill="white" stroke-width="4"/>
                     </svg>
                     <svg width="20" height="20">
-                        <circle cx="10" cy="10" r="8" stroke="black" stroke-width="1"/>
+                        <circle cx="10" cy="10" r="8" stroke="black" fill="white" stroke-width="4"/>
                     </svg>
                     <svg width="20" height="20">
-                        <circle cx="10" cy="10" r="8" stroke="black" stroke-width="1"/>
+                        <circle cx="10" cy="10" r="8" stroke="black" fill="white" stroke-width="4"/>
                     </svg>
                     <svg width="20" height="20">
-                        <circle cx="10" cy="10" r="8" stroke="black" stroke-width="1"/>
+                        <circle cx="10" cy="10" r="8" stroke="black" fill="white" stroke-width="4"/>
                     </svg>
                     <svg width="20" height="20">
-                        <circle cx="10" cy="10" r="8" stroke="black" stroke-width="1"/>
+                        <circle cx="10" cy="10" r="8" stroke="black" fill="white" stroke-width="4"/>
                     </svg>
                 </div>
             </div>
