--- a/src/pages/generateur.html
+++ b/src/pages/generateur.html
@@ -62,33 +62,113 @@
                 <svg class="absolute top-64 -left-16 scale-50" width="282" height="282" fill="none">
                     <path opacity="0.8" fill-rule="evenodd" clip-rule="evenodd" d="M141 282C218.872 282 282 218.872 282 141C282 63.1278 218.872 0 141 0C63.1278 0 0 63.1278 0 141C0 218.872 63.1278 282 141 282ZM141 223.051C186.315 223.051 223.051 186.316 223.051 141C223.051 95.6846 186.315 58.9492 141 58.9492C95.6845 58.9492 58.9491 95.6846 58.9491 141C58.9491 186.316 95.6845 223.051 141 223.051Z" fill="#E7BC87"/>
                 </svg>
-                <svg class="absolute -bottom-20 right-4 scale-90" width="282" height="282" fill="none">
+                <svg class="absolute -bottom-40 right-4 scale-90" width="282" height="282" fill="none">
                     <path opacity="0.8" fill-rule="evenodd" clip-rule="evenodd" d="M141 282C218.872 282 282 218.872 282 141C282 63.1278 218.872 0 141 0C63.1278 0 0 63.1278 0 141C0 218.872 63.1278 282 141 282ZM141 223.051C186.315 223.051 223.051 186.316 223.051 141C223.051 95.6846 186.315 58.9492 141 58.9492C95.6845 58.9492 58.9491 95.6846 58.9491 141C58.9491 186.316 95.6845 223.051 141 223.051Z" fill="#E7BC87"/>
                 </svg>
             </div>
-            <div>
-                <div class="navigation mb-32">
-                    <div class="flex flex-wrap w-full justify-between">
+            <div class="relative">
+                <div class="navigation mb-10">
+                    <div class="flex flex-wrap w-full justify-between place-items-end laptop:w-1/3 laptop:mx-auto">
                         <a href="./totems.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-marine" aria-hidden="true"></span>
+                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-marine hover:h-2" aria-hidden="true"></span>
                             <span class="relative">Totems</span>
                         </a>
                         <a href="./lampes.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-light-red" aria-hidden="true"></span>
-                            <span class="relative">Personnaliser</span>
+                            <span class="block h-3 absolute -inset-x-2 -bottom-2 top-8 bg-light-red hover:h-2" aria-hidden="true"></span>
+                            <span class="relative font-bold">Personnaliser</span>
                         </a>
                         <a href="./générateur.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-blue" aria-hidden="true"></span>
+                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-blue hover:h-2" aria-hidden="true"></span>
                             <span class="relative">Générateur</span>
                         </a>
                     </div>
                 </div>
-                <h1 class="h1 relative">Personnalisez votre Ciluzio</h1>
-                <p class="text-marine font-bold relative">Choisissez votre taille</p>
+
+                <div class="generateur  laptop:w-3/5 laptop:mx-auto">
+                    <div class="navigation mb-4">
+                        <div class="flex flex-wrap place-items-end">
+                            <a href="" class="relative cursor-pointer mr-8">
+                                <span class="block h-3 absolute -inset-x-2 -bottom-2 top-8 bg-marine hover:h-2" aria-hidden="true"></span>
+                                <span class="relative font-bold">Taille fixe</span>
+                            </a>
+                            <a href="" class="relative cursor-pointer mr-8">
+                                <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-blue hover:h-2" aria-hidden="true"></span>
+                                <span class="relative">Taille aléatoire</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="flex flex-row justify-between items-center my-8 laptop:my-4">
+                        <div class="tailles">
+                            <div class="flex row items-center mb-2">
+                                <input type="radio" class="button_radio mr-2"><label for="" class="mb-0">Piccolo <br/>- 140 cm</label>
+                            </div>
+                            <div class="flex row items-center mb-2">
+                                <input type="radio" class="button_radio mr-2"><label for="" class="mb-0">Medio <br/>- 140 cm</label>
+                            </div>
+                            <div class="flex row items-center mb-2">
+                                <input type="radio" class="button_radio mr-2"><label for="" class="mb-0">Grande <br/>- 140 cm</label>
+                            </div>
+                        </div>
+                        <div class="image w-2/3 laptop:max-h-[45vh]">
+                            <img src="../images/victor-grande.webp" alt="" class="mx-auto laptop:h-96">
+                        </div>
+                        <div class="couleurs">
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                            <svg width="30" height="30">
+                                <circle cx="15" cy="15" r="12" stroke="black" fill="white" stroke-width="3"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="buttons flex row justify-between items-baseline mb-4">
+                        <div class="button-left flex flex-col items-start">
+                            <button class="button_secondary p-3">
+                                <svg class="ml-0" width="20" height="20" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.4998 4.29383L11.3795 3.14226C8.74984 0.439138 3.92796 1.37195 2.18734 4.77039C1.37015 6.36883 1.18577 8.67664 2.67796 11.622C4.11546 14.4579 7.10609 17.8548 12.4998 21.5548C17.8936 17.8548 20.8826 14.4579 22.3217 11.622C23.8139 8.67508 23.6311 6.36883 22.8123 4.77039C21.0717 1.37195 16.2498 0.437576 13.6201 3.1407L12.4998 4.29383ZM12.4998 23.4376C-11.458 7.60633 5.12327 -4.74992 12.2248 1.78601C12.3186 1.87195 12.4108 1.96101 12.4998 2.0532C12.588 1.9611 12.6797 1.87249 12.7748 1.78758C19.8748 -4.75305 36.4576 7.60476 12.4998 23.4376Z" fill="#0C2750"/>
+                                </svg>                                    
+                            </button>
+                            <button class="button_secondary">Générer</button>
+                        </div>
+                        <div class="button-right flex flex-col items-end">
+                            <p class="font-bold text-marine text-2xl">Prix €€€</p>
+                            <button class="button justify-self-end bg-marine">Acheter
+                                <svg width="28" height="16" viewBox="0 0 28 16" fill="none">
+                                    <path d="M1 8H26" stroke-width="3" stroke-linecap="round"/>
+                                    <path d="M19.5 1.5L26 8L19.5 14.5" stroke-width="3" stroke-linecap="round"/>
+                                </svg>
+                            </button>   
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
-    <footer class="px-5 laptop:px-20 py-5 bg-skin laptop:flex laptop:flex-rows laptop:w-full laptop:justify-evenly">
+    <footer class="px-5 laptop:px-40 py-5 bg-skin laptop:flex laptop:flex-rows laptop:w-full laptop:justify-evenly">
         <div class="footer_info">
             <h3 class="h4 text-marine">Informations</h3>
             <p><a href="">Livraison et retours</a></p>
@@ -119,7 +199,7 @@
             // Optional parameters
             direction: 'horizontal',
             slidesPerView: 1,
-            spaceBetween: 10,
+            spaceBetween: 40,
             centeredSlides: true,
         });
     </script>
