--- a/src/pages/totems.html
+++ b/src/pages/totems.html
@@ -67,25 +67,24 @@
                 </svg>
             </div>
             <div>
-                <div class="navigation mb-32">
-                    <div class="flex flex-wrap w-full justify-between">
+                <div class="navigation mb-32 laptop:my-10">
+                    <div class="flex flex-wrap w-full justify-between place-items-end laptop:w-1/3 laptop:mx-auto">
                         <a href="./totems.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-marine" aria-hidden="true"></span>
+                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-marine hover:h-2" aria-hidden="true"></span>
                             <span class="relative">Totems</span>
                         </a>
                         <a href="./lampes.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-light-red" aria-hidden="true"></span>
-                            <span class="relative">Personnaliser</span>
+                            <span class="block h-3 absolute -inset-x-2 -bottom-2 top-8 bg-light-red hover:h-2" aria-hidden="true"></span>
+                            <span class="relative font-bold">Personnaliser</span>
                         </a>
                         <a href="./générateur.html" class="relative cursor-pointer">
-                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-blue" aria-hidden="true"></span>
+                            <span class="block h-1 absolute -inset-x-2 -bottom-2 top-8 bg-blue hover:h-2" aria-hidden="true"></span>
                             <span class="relative">Générateur</span>
                         </a>
                     </div>
                 </div>
-                <h1 class="h1 relative">Personnalisez votre Ciluzio</h1>
-                <p class="text-marine font-bold relative">Choisissez votre taille</p>
             </div>
+            
         </div>
     </main>
     <footer class="px-5 laptop:px-20 py-5 bg-skin laptop:flex laptop:flex-rows laptop:w-full laptop:justify-evenly">
