HTML / CSS responsive - sans découpage des pièces

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <nav class="hidden absolute top-0 left-0 w-screen h-screen flex flex-col items-center justify-center bg-white text-center z-10 laptop:static laptop:max-w-fit laptop:block laptop:h-full laptop:bg-[transparent]">
                     <ul class="flex flex-col laptop:flex-row">
                         <li class="mb-8 laptop:mb-0 laptop:mr-8"><a href="" class="font-saotorpes text-marine text-2xl">Accueil</a></li>
-                        <li class="mb-8 laptop:mb-0 laptop:mr-8"><a href="./src/pages/pages.html" class="font-saotorpes text-marine text-2xl">Ciluzio</a></li>
+                        <li class="mb-8 laptop:mb-0 laptop:mr-8"><a href="./src/pages/lampes.html" class="font-saotorpes text-marine text-2xl">Ciluzio</a></li>
                         <li class="mb-8 laptop:mb-0 laptop:mr-8"><a href="./src/pages/cart.html" class="font-saotorpes text-marine text-2xl">Panier</a></li>
                         <li class="mb-8 laptop:mb-0 laptop:mr-8"><a href="./src/pages/account.html" class="font-saotorpes text-marine text-2xl">Mon compte</a></li>
                     </ul>
