--- a/src/pages/lampes.html
+++ b/src/pages/lampes.html
@@ -95,12 +95,12 @@
                                     <div class="flex flex-col items-end">
                                         <p class="text-white font-bold text-xl">Piccolo</p>
                                         <p class="text-white font-bold text-xl">490 €</p>
-                                        <button class="button_secondary text-white border-white">Configurer
+                                        <a href="./lampes_2.html" class="button_secondary text-white border-white">Configurer
                                             <svg width="28" height="16" viewBox="0 0 28 16" fill="none">
                                                 <path class="stroke-white" d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
                                                 <path class="stroke-white" d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
                                             </svg>
-                                        </button>
+                                        </a>
                                     </div>
                                 </div>
                                 <div class="-z-10">
@@ -152,12 +152,12 @@
                                 <div class="flex flex-col items-end">
                                     <p class="text-white font-bold text-xl">Piccolo</p>
                                     <p class="text-white font-bold text-xl">490 €</p>
-                                    <button class="button_secondary text-white border-white">Configurer
+                                    <a href="./lampes_2.html" class="button_secondary text-white border-white">Configurer
                                         <svg width="28" height="16" viewBox="0 0 28 16" fill="none">
                                             <path class="stroke-white" d="M1 8H26" stroke-width="2" stroke-linecap="round"/>
                                             <path class="stroke-white" d="M19.5 1.5L26 8L19.5 14.5" stroke-width="2" stroke-linecap="round"/>
                                         </svg>
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                             <div class="-z-10">
